Fixed icon alignment

--- a/app/NovaWeb/src/styles/partials/_manage-traces.scss
+++ b/app/NovaWeb/src/styles/partials/_manage-traces.scss
@@ -210,7 +210,7 @@ $modal-side-clearance: 8px;
                 border: 2px solid #ccc;
                 border-radius: 50%;
                 float: left;
-                line-height: 2.3rem;
+                line-height: 2rem;
                 text-align: center;
                 background: $white;
 
